--- a/app/templates/pictures.html
+++ b/app/templates/pictures.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>{{ _('Pictures') }}</h1>
+    <span class="b-content-title">{{ _('Pictures') }}</span>
 
     <div class="container block">
 
