--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -6,7 +6,7 @@
     }
 </script>
 {% block content %}
-    <h1>{{ _('Video') }}</h1>
+    <span class="b-content-title">{{ _('Video') }}</span>
 
     <div class="container block">
         {% for video in videos %}
