--- a/app/templates/menu_content.html
+++ b/app/templates/menu_content.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     {% if locale == 'en' %}
-    	<h1>{{ page.title }}</h1>
+    	<span class="b-content-title">{{ page.title }}</span>
     	<div class="page-content">{{ page.text|safe }}</div>
     {% else %}
-        <h1>{{ page.title_ru }}</h1>
+    	<span class="b-content-title">{{ page.title_ru }}</span>
         <div class="page-content">{{ page.text_ru|safe }}</div>
     {% endif %}
 {% endblock %}
