--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -58,7 +58,7 @@ body
 .body-left-menu
 {
   background: white;
-  min-height: 1500px !important;
+  min-height: 1250px !important;
   width: 307px;
   display: inline-block;
   vertical-align: top;
@@ -68,7 +68,7 @@ body
 .body-content
 {
   background: #f2f5f7;
-  min-height: 1300px !important;
+  min-height: 1250px !important;
   width: 717px;
   display: inline-block;
   vertical-align: top;
@@ -97,4 +97,11 @@ body
   font-weight: bold;
   margin-left: 30px;
   margin-top: 10px;
+}
+
+.b-footer
+{
+  background-color: #006bb3;
+  width: 1024px;
+  height: 80px;
 }
