--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,6 +46,8 @@
     {% endblock %}
 </div>
 
+<div class="b-footer"></div>
+
 <a href="#" id="back-to-top" title="Back to top">&uarr;</a>
 
 <script type="text/javascript">
