--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -105,3 +105,11 @@ body
   width: 1024px;
   height: 80px;
 }
+
+.page-content
+{
+  margin-left: 30px;
+  margin-right: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
