--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -59,7 +59,7 @@ body
 {
   background: white;
   min-height: 1250px !important;
-  width: 307px;
+  width: 30%;
   display: inline-block;
   vertical-align: top;
   margin-right: -4px;
@@ -69,7 +69,7 @@ body
 {
   background: #f2f5f7;
   min-height: 1250px !important;
-  width: 717px;
+  width: 70%;
   display: inline-block;
   vertical-align: top;
 }
