--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,10 +25,6 @@
 
 {% include "header.html" %}
 
-<div class="menu_wrapper">
-    {% include "menu-old.html" %}
-</div>
-
 <div class="b-header-separator"></div>
 
 <div class="b-psi-logo">
@@ -39,7 +35,12 @@
     {% endif %}
 </div>
 
-<div class="body-left-menu"></div>
+<div class="body-left-menu">
+    <div class="menu_wrapper">
+        {% include "menu-old.html" %}
+    </div>
+    <div class="b-banner"></div>
+</div>
 
 <div class="body-content">
     {% block content %}
