--- a/app/static/css/menu.css
+++ b/app/static/css/menu.css
@@ -1,15 +1,15 @@
 .menu_wrapper
 {
+    display: block;
     position:relative;
+    width: 100%;
 }
 
 .menu
 {
-    margin-top: 24px;
     display: block;
-    position: absolute;
-    top: 182px;
-    width: 307px;
+    width: 100%;
+
     border: 0 !important;
     
     -webkit-box-shadow: none !important;
