--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -10,6 +10,6 @@
         <a href="" id="changeLanguageButton">{{ _('ru') }}</a>
     </div>
     <div class="b-inno-logo">
-        <a href="http://university.innopolis.ru"><img src="{{ url_for('static', filename='images/inno_logo.png') }}"></a>
+        <a href="http://university.innopolis.ru"></a>
     </div>
 </div>
