Fixed inno header href

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -9,7 +9,5 @@
     <div class="b-lang">
         <a href="" id="changeLanguageButton">{{ _('ru') }}</a>
     </div>
-    <div class="b-inno-logo">
-        <a href="http://university.innopolis.ru"></a>
-    </div>
+    <a class="b-inno-logo" href="http://university.innopolis.ru"></a>
 </div>
