--- a/app/static/css/speakers.css
+++ b/app/static/css/speakers.css
@@ -38,6 +38,7 @@ div.keynote:hover {
   margin-bottom: 10px;
   margin: auto;
   margin-top: 20px;
+  max-height: 200px;
 
   -webkit-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
