--- a/app/static/css/speakers.css
+++ b/app/static/css/speakers.css
@@ -39,6 +39,7 @@ div.keynote:hover {
   margin: auto;
   margin-top: 20px;
   max-height: 200px;
+  border-radius: 50%;
 
   -webkit-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
