--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -252,7 +252,7 @@
     background-image: url("../images/photo_hover.png");
 }
 
-.b-banner
+.b-showcase
 {
     background-image: url("../images/banner-grey.jpg");
     width: 160px;
