--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -12,6 +12,12 @@
 
 
 {% block content %}
+<br>
+<div class="container block">
+  <div align="justify" class="b-conf-descr">
+{{ _('The Perspectives of System Informatics (PSI) conference series is a forum for academic and industrial researchers, developers and users working on topics relating to computer, software and information sciences. The conference serves to bridge the gaps between different communities whose research areas are covered by but not limited to foundations of program and system development and analysis, programming methodology and software engineering, and information technologies. The PSI forum provides a venue for such communities at which common problems, methods and methodologies can be discussed and explored. In doing so, PSI aims to support researchers in their quest to improve the reliability, flexibility and efficiency of methods, algorithms and tools for developing computer, software and information systems.') }}
+  </div>
+</div>
 <div class="container block">
     <div class="raw">
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
@@ -46,8 +52,7 @@
 <br>
 <div class="b-main-separator"></div><br>
 <div class="container block">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
       <span class="b-main-centered-title">{{_('Keynote Speakers')}}</span>
 
       <div data-slick='{"slidesToShow": 2, "slidesToScroll": 1, "prevArrow": "<span class=\"arrow-prev \">&lt;</span>", "nextArrow": "<span class=\"arrow-next \">&gt;</span>"}'>
@@ -65,7 +70,7 @@
         </div>
         {% endfor %}
       </div>
-</div>
+    </div>
 </div>
 <div class="b-main-separator"></div><br>
 <div class="container block">
@@ -75,7 +80,8 @@
         <a class="b-photo" href="{{ url_for('main.pictures') }}"></a>
     </div>
 </div>
-
+<br>
+<br>
 
 {% endblock %}
 
