--- a/app/templates/page/page_list.html
+++ b/app/templates/page/page_list.html
@@ -23,15 +23,18 @@
 {% endmacro %}
 
 {% block model_list_table %}
-<ul class="menu dropdown-menu">
-  {% for node in data %}
-    <li class="dropdown-submenu">
-        <a href="{{get_url('.edit_view', id=node.value.id, url=return_url) }}">{{node.value.title}}</a>
-        {{add_submenu(node)}}
-    </li>
-    {% endfor %}
-    <li> <a href="{{get_url('.create_view', url=return_url) }}">Add new page</a></li>
-</ul>
+<div class="body-left-menu">
+    <div class="menu_wrapper">
+        <ul class="menu dropdown-menu">
+    {% for node in data %}
+      <li class="dropdown-submenu">
+          <a href="{{get_url('.edit_view', id=node.value.id, url=return_url) }}">{{node.value.title}}</a>
+          {{add_submenu(node)}}
+      </li>
+      {% endfor %}
+      <li> <a href="{{get_url('.create_view', url=return_url) }}">Add new page</a></li>
+        </ul
+  </div>
+</div>
 
 {% endblock %}
-
