--- a/app/templates/menu-old.html
+++ b/app/templates/menu-old.html
@@ -19,7 +19,7 @@
     <li><a href="/">{{ _('Welcome') }}</a></li>
     <!--<li><a href="http://www.easychair.org/smart-program/PSI2015/index.html">{{ _('Programme') }}</a></li>-->
     <li><a href="{{ url_for('static', filename='data/Draft_Program_PSI_2015.pdf') }}">{{ _('Programme') }}</a></li>
-    <li><a href="{{ url_for('static', filename='data/psi_2015_cfp.pdf') }}">{{ _('Call for Papers (PDF)') }}</a></li>
+    <li><a href="{{ url_for('static', filename='data/PSI_2015_cfp_-_extended.pdf') }}">{{ _('Call for Papers (PDF)') }}</a></li>
     <li><a href="{{ url_for('main.speakers') }}">{{ _('Keynote Speakers') }}</a></li>
 
     {% for child_node in data %}
