--- a/app/templates/menu-old.html
+++ b/app/templates/menu-old.html
@@ -17,8 +17,8 @@
 
 <ul class="menu dropdown-menu">
     <li><a href="/">{{ _('Welcome') }}</a></li>
-    <!--<li><a href="http://www.easychair.org/smart-program/PSI2015/index.html">{{ _('Programme') }}</a></li>-->
-    <li><a href="{{ url_for('static', filename='data/Draft_Program_PSI_2015.pdf') }}">{{ _('Programme') }}</a></li>
+    <li><a href="http://www.easychair.org/smart-program/PSI2015/index.html">{{ _('Programme') }}</a></li>
+    <!--<li><a href="{{ url_for('static', filename='data/Draft_Program_PSI_2015.pdf') }}">{{ _('Programme') }}</a></li>-->
     <li><a href="{{ url_for('static', filename='data/PSI_2015_cfp_-_extended.pdf') }}">{{ _('Call for Papers (PDF)') }}</a></li>
     <li><a href="{{ url_for('main.speakers') }}">{{ _('Keynote Speakers') }}</a></li>
     <li><a href="{{ url_for('main.registration') }}">{{ _('Registration') }}</a></li>
